fixed the spacing for the footer

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a {
 
 footer {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
   background-color: black;
   height: 10vh;
@@ -25,7 +25,6 @@ footer {
 }
 footer p {
   padding-right: 10px;
-  padding-left: 10%;
   font-size: 20px;
 }
 footer a {
