--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,13 +1,12 @@
 footer {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     background-color: black;
     height: 10vh;
     color: white;
     p {
         padding-right: 10px;
-        padding-left: 10%;
         font-size: 20px;
     }
     a {
